refactor: matching algorithm